2007-04-05  Mike Kestner  <mkestner@novell.com>

	* glib/ToggleRef.cs : flush a few leftover changes from a
	ToggleRef refinement.

2007-03-15  Mike Kestner  <mkestner@novell.com>

	* generator/CallbackGen.cs : generate try/catch blocks for
	native to managed marshallers.  [Fixes the rest of #80516]

2007-03-08  Mike Kestner  <mkestner@novell.com>

	* glib/Signal.cs : guard against NULL gchandles.
	* gdk/Input.custom : add try/catch blocks to native callbacks.
	* gtk/*.custom : ditto
	* gtk/NodeStore.cs : ditto

2007-03-08  Mike Kestner  <mkestner@novell.com>

	* glib/*.cs : add try/catch blocks to native callback
	methods for DestroyNotify, Copy/Free, and ToggleNotify handlers.  
	Raise UnhandledException events on catches.  

2007-03-06  Mike Kestner  <mkestner@novell.com>

	* generator/Signal.cs : add try/catch blocks to native callback
	virtual method delegate too.

2007-03-06  Mike Kestner  <mkestner@novell.com>

	* generator/Signal.cs : add try/catch blocks to native callback
	delegates so that exceptions are not propagated across the native
	boundary.  Now raises GLib.ExceptionManager.UnhandledException.
	* glib/ExceptionManager.cs : new class with UnhandledException
	event and a static method to raise it.
	* glib/Signal.cs : wrap the generic EventHandler callback delegate
	with try/catch blocks and raise the UnhandledException event.

2007-03-05  Mike Kestner  <mkestner@novell.com>

	* gtk/Application.custom : set prgname in Init methods so
	that WM_CLASS is more appropriate.  Programs using Gnome.Program
	already get a nice prgname, but Gtk.Application.Init apps were
	getting a path instead of a filename without extension.

2007-03-01  Brad Taylor  <brad@getcoded.net>

	* gtk/Dialog.custom: obsolete old, improperly bound
	  SetAlternateButtonOrderFromArray.
	* gtk/Gtk.metadata: fix binding of the
	  gtk_dialog_set_alternate_button_order_from_array. [Fixes #80706]

2007-03-01  Mike Kestner  <mkestner@novell.com>
