@@ -1,3 +1,8 @@
+2007-04-09  Brad Taylor  <brad@getcoded.net>
+
+	* gtk/glue/widget.c:
+	* gtk/Widget.custom: Bind activate_signal in GtkWidgetClass.
+
 2007-04-05  Mike Kestner  <mkestner@novell.com>
 
 	* glib/ToggleRef.cs : flush a few leftover changes from a
